// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`execute http endpoint should return success 1`] = `
{
  "data": {
    "result": "123000",
  },
  "meta": {
    "adapterName": "GENERIC_API",
    "metrics": {
      "feedId": "{"apiName":"test","dataPath":"por","ripcordPath":"ripcord","ripcordDisabledValue":"false"}",
    },
  },
  "result": "123000",
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return error when data path is not found 1`] = `
{
  "errorMessage": "Data path 'non_existent_field' not found in response for 'MISSING_PATH'",
  "meta": {
    "adapterName": "GENERIC_API",
    "metrics": {
      "feedId": "{"apiName":"missing_path","dataPaths":[{"name":"nav","path":"net_asset_value"},{"name":"aum","path":"non_existent_field"}],"ripcordDisabledValue":"false"}",
    },
  },
  "statusCode": 500,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return error when ripcord is activated 1`] = `
{
  "errorMessage": "Ripcord activated for 'RIPCORD'. Details: Error: stale data",
  "meta": {
    "adapterName": "GENERIC_API",
    "metrics": {
      "feedId": "{"apiName":"ripcord","dataPaths":[{"name":"nav","path":"net_asset_value"}],"ripcordPath":"ripcord","ripcordDisabledValue":"false"}",
    },
  },
  "ripcord": true,
  "ripcordAsInt": 1,
  "ripcordDetails": "Error: stale data",
  "statusCode": 503,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
  },
}
`;

exports[`execute multi-http endpoint should return success with multiple values 1`] = `
{
  "data": {
    "aum": 30127047.47,
    "nav": 1.004373266745,
    "ripcord": false,
    "ripcordAsInt": 0,
  },
  "meta": {
    "adapterName": "GENERIC_API",
    "metrics": {
      "feedId": "{"apiName":"nx8","dataPaths":[{"name":"nav","path":"net_asset_value"},{"name":"aum","path":"asset_under_management"}],"ripcordPath":"ripcord","ripcordDisabledValue":"false","providerIndicatedTimePath":"updatedat"}",
    },
  },
  "result": null,
  "statusCode": 200,
  "timestamps": {
    "providerDataReceivedUnixMs": 978347471111,
    "providerDataRequestedUnixMs": 978347471111,
    "providerIndicatedTimeUnixMs": 1768805782194,
  },
}
`;
